--- a/index.ipynb
+++ b/index.ipynb
@@ -321,16 +321,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries[6] = countries[2] # add code here"
+    "countries[6] = countries[1] # add code here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        " 'Mexico',\n",
        " 'USA',\n",
        " 'Morocco',\n",
-       " 'Argentina',\n",
+       " 'USA',\n",
        " 'Finland',\n",
        " 'Argentina',\n",
        " 'Italy',\n",
@@ -352,7 +352,7 @@
        " 'Thailand']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
