--- a/index.ipynb
+++ b/index.ipynb
@@ -321,11 +321,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries[6] = countries[1] # add code here"
+    "countries = countries[1] # add code here"
    ]
   },
   {
