--- a/index.ipynb
+++ b/index.ipynb
@@ -492,7 +492,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = len(unique_countries(None\n",
+    "num_of_repeats = len(unique_countries) - len(countries)(None\n",
     "num_of_repeats # 3"
    ]
   },
