--- a/index.ipynb
+++ b/index.ipynb
@@ -488,11 +488,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-3"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "num_of_repeats = len(unique_countries) - len(countries)(None\n",
+    "num_of_repeats = len(countries)\n",
     "num_of_repeats # 3"
    ]
   },
